feat: auth and db added

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,11 @@ PORT=1234
 HOST=http://127.0.0.1
 ORIGINS="http://127.0.0.1:3000,http://localhost:3000"
 
+# Auth configuration
+REFRESH_TOKEN_EXPIRES_IN=1d
+ACCESS_TOKEN_EXPIRES_IN=15m
+JWT_SECRET=secret
+
 # Database configuration
-DB_HOST=localhost
+DB_URL=mongodb://localhost:27017/easy-generator
 
