--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.4",
     "ms": "^2.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -38,9 +42,11 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
@@ -80,7 +86,6 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@auth/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
       "^@common/common(|/.*)$": "<rootDir>/libs/common/src/$1"
     }
   }
