chore: dockerfile added and readme update

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,21 @@
 version: '3.7'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "8000:8000"
+    environment:
+      DB_URL: mongodb://db:27017/easy-generator
+      HOST: http://localhost:8000
+      ORIGINS: http://localhost:3000
+      REFRESH_TOKEN_EXPIRES_IN: 1d
+      ACCESS_TOKEN_EXPIRES_IN: 15m
+      JWT_SECRET: very-secret
+    depends_on:
+      - db
   db:
     image: mongo
     restart: always
