--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,44 @@
 version: '3.7'
 services:
+  nginx:
+    container_name: easy-gen-nginx
+    image: nginx:alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+      - app
+    restart: always
+
   app:
+    container_name: easy-gen-frontend
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+      args:
+        EASY_GEN_API_URL: http://localhost:8080/api
+    restart: always
+
+  api:
+    container_name: easy-gen-app
     build:
       context: .
       dockerfile: Dockerfile
     restart: always
-    ports:
-      - "8000:8000"
     environment:
       DB_URL: mongodb://db:27017/easy-generator
       HOST: http://localhost:8000
-      ORIGINS: http://localhost:3000
+      ORIGINS: http://localhost:8080
       REFRESH_TOKEN_EXPIRES_IN: 1d
       ACCESS_TOKEN_EXPIRES_IN: 15m
       JWT_SECRET: very-secret
     depends_on:
       - db
+
   db:
+    container_name: easy-gen-mongo
     image: mongo
     restart: always
     ports:
@@ -24,4 +46,4 @@ services:
     environment:
       MONGODB_DATABASE: easy-generator
     volumes:
-      - .mongo-db:/data/db
+      - .db:/data/db
